--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database:20.2.1'
+    implementation 'es.voghdev.pdfviewpager:library:1.1.2'
+    implementation 'com.itextpdf:itext7-core:7.1.16'
 }
