--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
@@ -20,5 +21,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 }
