--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.AplicatieMobileBanking"
         tools:targetApi="31" >
         <activity
-            android:name=".AdminMainActivity"
+            android:name=".activities.AdminMainActivity"
             android:exported="false"
             android:label="@string/title_activity_admin_main"
             android:theme="@style/Theme.AplicatieMobileBanking.NoActionBar" >
@@ -25,7 +25,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +38,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
