--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    packagingOptions {
+        pickFirst 'META-INF/DEPENDENCIES'
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -33,7 +38,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -52,4 +56,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.2.1'
     implementation 'es.voghdev.pdfviewpager:library:1.1.2'
     implementation 'com.itextpdf:itext7-core:7.1.16'
-}
+    implementation 'com.github.mukeshsolanki.android-otpview-pinview:otpview:3.1.0'
+    implementation("com.google.firebase:firebase-auth")
+   }
